--- a/CapaDeDatos/CapaDeUsuario/CapaDeUsuario.csproj
+++ b/CapaDeDatos/CapaDeUsuario/CapaDeUsuario.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmMantenimientoPaciente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmMantenimientoPaciente.Designer.cs">
+      <DependentUpon>frmMantenimientoPaciente.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
