--- a/CapaDeDatos/CapaDeUsuario/CapaDeUsuario.csproj
+++ b/CapaDeDatos/CapaDeUsuario/CapaDeUsuario.csproj
@@ -58,6 +58,12 @@
     <Compile Include="frmMantenimientoPaciente.Designer.cs">
       <DependentUpon>frmMantenimientoPaciente.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmUsuario.Designer.cs">
+      <DependentUpon>frmUsuario.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
