--- a/CapaDeDatos/CapaDeNegocios/CapaDeNegocios.csproj
+++ b/CapaDeDatos/CapaDeNegocios/CapaDeNegocios.csproj
@@ -45,6 +45,12 @@
     <Compile Include="Establecimientos\cMicrored.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CapaDeDatos\CapaDeDatos.csproj">
+      <Project>{85bebbcf-d9a3-4a03-b041-87b7d557d8e8}</Project>
+      <Name>CapaDeDatos</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
